# flashcard-server

./: .gitignore  Cargo.toml  README.md  flashcard.service  start.sh
src/: main.rs
