[package]
name = "flashcard-server"
version = "0.1.0"
authors = ["WebeWizard <webewizard@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
lib_flashcard = { git = "ssh://git@github.com/WebeWizard/lib-flashcard.git" }
webe_auth =  { git = "ssh://git@github.com/WebeWizard/lib-webe.git" }
webe_web = { git = "ssh://git@github.com/WebeWizard/lib-webe.git" }
webe_id = "0.1.1"

[replace]
"diesel:1.4.3" = { path = "../diesel/diesel", features = ["mysql", "chrono", "r2d2"] }
"diesel_derives:1.4.1" = { path = "../diesel/diesel_derives"}

