[package]
name = "flashcard-server"
version = "0.1.0"
authors = ["WebeWizard <webewizard@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
lib_flashcard = { git = "https://github.com/WebeWizard/lib-flashcard/" }
tokio = { version = "1.35.1", features = ["full"] }
webe_auth = { git = "https://github.com/WebeWizard/lib-webe/" }
webe_web = { git = "https://github.com/WebeWizard/lib-webe/" }
webe_id = "0.1.1"
